--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<ul class="nav-menu">
 				<li class="nav-item">
 					<div class="link-wrapper">
-						<a href="/calculator.html" class="nav-link">Calculator</a>
+						<a href="codeprint/calculator.html" class="nav-link">Calculator</a>
 					</div>
 				</li>
 				<li class="nav-item">
