--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 				</li>
 				<li class="nav-item">
 					<div class="link-wrapper">
-						<a href="https://knaagar.github.io/carbonprint/calculator.html" class="nav-link">Ways</a>
+						<a href="https://knaagar.github.io/carbonprint/ways.html" class="nav-link">Ways</a>
 					</div>
 				</li>
 				<li class="nav-item">
 					<div class="link-wrapper">
-						<a href="https://knaagar.github.io/carbonprint/calculator.html" class="nav-link">Programmers</a>
+						<a href="https://knaagar.github.io/carbonprint/programmers.html" class="nav-link">Programmers</a>
 					</div>
 				</li>
 			</ul>
