--- a/calculator.html
+++ b/calculator.html
@@ -10,22 +10,22 @@
 	<header class="header">
 		<nav class="navbar">
 			<div class="link-wrapper">
-				<a href="/" class="nav-logo">Home</a>
+				<a href="https://knaagar.github.io/carbonprint" class="nav-logo">Home</a>
 			</div>
 			<ul class="nav-menu">
 				<li class="nav-item">
 					<div class="link-wrapper">
-						<a href="/calculator.html" class="nav-link">Calculator</a>
+						<a href="https://knaagar.github.io/carbonprint/calculator.html" class="nav-link">Calculator</a>
 					</div>
 				</li>
 				<li class="nav-item">
 					<div class="link-wrapper">
-						<a href="/ways.html" class="nav-link">Ways</a>
+						<a href="https://knaagar.github.io/carbonprint/ways.html" class="nav-link">Ways</a>
 					</div>
 				</li>
 				<li class="nav-item">
 					<div class="link-wrapper">
-						<a href="/programmers.html" class="nav-link">Programmers</a>
+						<a href="https://knaagar.github.io/carbonprint/programmers.html" class="nav-link">Programmers</a>
 					</div>
 				</li>
 			</ul>
