--- a/programmers.html
+++ b/programmers.html
@@ -70,7 +70,14 @@
       Stats:<br>
       1. This web page is cleaner than 97% of web pages tested.<br>
       2. Only 0.02g of CO2 is produced every time someone visits this web page.
-      3. This web page emits the amount of carbon that less than 1 tree absorbs in a year.
+      3. This web page emits the amount of carbon that less than 1 tree absorbs in a year.<br><br>
+	What have I done to make this site green?<br>
+1. I have used no images (not even a favicon) because images are a lot of data.<br>
+2. The whole file size is 28 kB.<br>
+3. No server (because was not requires).<br>
+4. Tried to use less JS.<br>
+5. Used only one custom font and used web safe fonts.<br>
+6. Clean code
     </section>
   </div>
   <br><br><br>
